# makenote

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.claude/: gsd-file-manifest.json
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/milestones/v1.0-phases/01-scaffold-and-config/: 01-02-SUMMARY.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md
.planning/milestones/v1.0-phases/02-core-note-taking/: 02-01-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-distribution/: 03-01-PLAN.md  03-VERIFICATION.md
.planning/phases/01-scaffold-and-config/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-core-note-taking/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-CONTEXT.md
.planning/phases/03-distribution/: 03-01-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Formula/: makenote.rb
src/makenote/: __init__.py  cli.py  config.py  constants.py  github.py
tests/: test_cli.py  test_config.py  test_github.py
