[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "makenote"
version = "1.1.0"
requires-python = ">=3.9"
description = "Fast terminal note logging to GitHub"
dependencies = [
    "click>=8.1",
    "questionary>=2.0",
]

[project.scripts]
mn = "makenote.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
