[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "makenote-cli"
version = "1.1.0"
requires-python = ">=3.9"
description = "Fast terminal note logging to GitHub"
readme = "README.md"
license = "MIT"
authors = [{ name = "Hunter Finch", email = "finchyhunter@gmail.com" }]
keywords = ["notes", "cli", "github", "productivity", "terminal", "journaling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/hfinchy12/makenote"
Repository = "https://github.com/hfinchy12/makenote"
"Bug Tracker" = "https://github.com/hfinchy12/makenote/issues"

[project.scripts]
mn = "makenote.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
